[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Saiyan-Sans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://images/esfera_do_drag√£o.png" type="Texture" id=3]
[ext_resource path="res://images/sheet.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 661.25, 304 )
scale = Vector2( 0.400758, 0.290784 )
texture = ExtResource( 4 )

[node name="new_sheet_label" type="RichTextLabel" parent="."]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
margin_left = 328.0
margin_top = 347.0
margin_right = 544.0
margin_bottom = 403.0
custom_fonts/normal_font = SubResource( 1 )
text = "Criar ficha"

[node name="new_sheet_button" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 347.0
margin_right = 536.0
margin_bottom = 395.0

[node name="exit_label" type="RichTextLabel" parent="."]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
margin_left = 328.0
margin_top = 464.0
margin_right = 408.0
margin_bottom = 520.0
custom_fonts/normal_font = SubResource( 1 )
text = "Sair"

[node name="exit_button" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 464.0
margin_right = 400.0
margin_bottom = 512.0

[node name="battle_sim_label" type="RichTextLabel" parent="."]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
margin_left = 328.0
margin_top = 288.0
margin_right = 704.0
margin_bottom = 341.0
custom_fonts/normal_font = SubResource( 1 )
tab_size = 6
text = "Simulador de batalha"

[node name="battle_sim_button" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 288.0
margin_right = 696.0
margin_bottom = 336.0

[node name="battle_sim_label2" type="RichTextLabel" parent="."]
modulate = Color( 0.807843, 0.364706, 0, 1 )
margin_left = 193.0
margin_top = 40.0
margin_right = 1057.0
margin_bottom = 232.0
custom_fonts/normal_font = SubResource( 2 )
text = "DB Sheet Manager"

[node name="edit_label" type="RichTextLabel" parent="."]
modulate = Color( 0.121569, 0.121569, 0.121569, 1 )
margin_left = 328.0
margin_top = 406.0
margin_right = 824.0
margin_bottom = 462.0
custom_fonts/normal_font = SubResource( 1 )
text = "Visualizar ou Editar Ficha"

[node name="edit_button" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 406.0
margin_right = 816.0
margin_bottom = 448.0

[node name="dragon_ball_sprite" type="Sprite" parent="."]
position = Vector2( -148, 440 )
scale = Vector2( 0.035, 0.03 )
texture = ExtResource( 3 )

[node name="pointer_tween" type="Tween" parent="."]

[node name="0" type="Position2D" parent="."]
position = Vector2( 277, 307 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 277, 371 )

[node name="2" type="Position2D" parent="."]
position = Vector2( 277, 435 )

[node name="3" type="Position2D" parent="."]
position = Vector2( 277, 488 )

[connection signal="mouse_entered" from="new_sheet_button" to="." method="_on_new_sheet_button_mouse_entered"]
[connection signal="pressed" from="new_sheet_button" to="." method="_on_new_sheet_button_pressed"]
[connection signal="mouse_entered" from="exit_button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="battle_sim_button" to="." method="_on_battle_sim_button_mouse_entered"]
[connection signal="pressed" from="battle_sim_button" to="." method="_on_battle_sim_button_pressed"]
[connection signal="mouse_entered" from="edit_button" to="." method="_on_edit_button_mouse_entered"]
[connection signal="pressed" from="edit_button" to="." method="_on_edit_button_pressed"]
